abs, division, modulus

--- a/Python basics.ipynb
+++ b/Python basics.ipynb
@@ -1869,7 +1869,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d3fcdaf7",
+   "id": "ca600f1a",
    "metadata": {},
    "source": [
     "# Scopes in python\n",
@@ -1886,7 +1886,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "5375d7cd",
+   "id": "8a4d69d1",
    "metadata": {},
    "outputs": [
     {
@@ -1911,7 +1911,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "388a4b19",
+   "id": "f9388c38",
    "metadata": {},
    "outputs": [
     {
@@ -1936,7 +1936,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "dc5bfaab",
+   "id": "83a473c8",
    "metadata": {},
    "outputs": [
     {
@@ -1960,7 +1960,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "a645aee7",
+   "id": "2d622c3d",
    "metadata": {},
    "outputs": [
     {
@@ -1984,7 +1984,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2992be02",
+   "id": "e4bc63f1",
    "metadata": {},
    "source": [
     "## global keyword in python\n",
@@ -1994,7 +1994,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "42824c8f",
+   "id": "792d8cd1",
    "metadata": {},
    "outputs": [
     {
@@ -2025,7 +2025,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "b7c5c3fe",
+   "id": "61e5b9a0",
    "metadata": {},
    "outputs": [
     {
@@ -2056,7 +2056,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e39345e1",
+   "id": "3de8f81d",
    "metadata": {},
    "source": [
     "## nonlocal keyword\n",
@@ -2066,7 +2066,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "e670c129",
+   "id": "9945619d",
    "metadata": {},
    "outputs": [
     {
@@ -2095,8 +2095,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "4b5b6511",
+   "execution_count": 36,
+   "id": "e797c174",
    "metadata": {},
    "outputs": [
     {
@@ -2111,12 +2111,11 @@
    ],
    "source": [
     "# With nonlocal keyword\n",
-    "# The value of x in outer() is written with value of x with\n",
     "x = 1\n",
     "def outer():\n",
     "    x=2\n",
     "    def inner():\n",
-    "        nonlocal x\n",
+    "        nonlocal x # The value of x in outer() is written with value of x with inner() in memory\n",
     "        x=3\n",
     "        print(f\"inner function sees x as {x}\")\n",
     "    inner()\n",
@@ -2128,7 +2127,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1ce1b931",
+   "id": "9161ca5e",
    "metadata": {},
    "outputs": [],
    "source": []
