--- a/Python for math.ipynb
+++ b/Python for math.ipynb
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 14,
    "id": "392cf879",
    "metadata": {},
    "outputs": [
@@ -376,9 +376,124 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "db3b1d2d",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9b0998b3",
+   "metadata": {},
+   "source": [
+    "# Absolute value\n",
+    "Absolute value is the the distance of a value from origin"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "3e860042",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "35\n"
+     ]
+    }
+   ],
+   "source": [
+    "abs(-4)\n",
+    "a = -35\n",
+    "print(abs(a))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9395b7c5",
+   "metadata": {},
+   "source": [
+    "# Interger division and Modulus operator "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "b623c0b3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.3333333333333335\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 10/3\n",
+    "print(a)\n",
+    "print(int(a))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "4bc31fbf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 10 % 3\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "22cc1145",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-5 is an odd number\n",
+      "-4 is an even number\n",
+      "-3 is an odd number\n",
+      "-2 is an even number\n",
+      "-1 is an odd number\n",
+      "0 is an even number\n",
+      "1 is an odd number\n",
+      "2 is an even number\n",
+      "3 is an odd number\n",
+      "4 is an even number\n",
+      "5 is an odd number\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(-5,6):\n",
+    "    if i%2 == 0:\n",
+    "        print(f\"{i} is an even number\")\n",
+    "    else:\n",
+    "        print(f\"{i} is an odd number\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2917cb3e",
+   "id": "6a6487ef",
    "metadata": {},
    "outputs": [],
    "source": []
