leap year with iterator

--- a/Python basics.ipynb
+++ b/Python basics.ipynb
@@ -1559,10 +1559,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "id": "9c97a30a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "garderning\n",
+      "art\n",
+      "play\n"
+     ]
+    }
+   ],
    "source": [
     "class Father:\n",
     "    def getSkill(self):\n",
@@ -1639,10 +1649,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "id": "dd1b3661",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'tuple_iterator'>\n",
+      "apple\n",
+      "orange\n",
+      "kiwi\n"
+     ]
+    }
+   ],
    "source": [
     "mytuple = (\"apple\",\"orange\",\"kiwi\")\n",
     "myiter = iter(mytuple)\n",
@@ -1654,10 +1675,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "id": "a0ff0dda",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "d\n",
+      "a\n",
+      "d\n",
+      " \n",
+      "a\n",
+      "n\n",
+      "d\n",
+      " \n",
+      "m\n",
+      "o\n",
+      "m\n"
+     ]
+    }
+   ],
    "source": [
     "mystring = \"dad and mom\"\n",
     "myiter = iter(mystring)\n",
@@ -1684,10 +1723,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "id": "01bfd76e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n",
+      "11\n",
+      "12\n",
+      "13\n",
+      "14\n",
+      "15\n",
+      "16\n",
+      "17\n",
+      "18\n",
+      "19\n",
+      "20\n"
+     ]
+    }
+   ],
    "source": [
     "class NaturalNumber:\n",
     "    def __init__(self):\n",
@@ -1766,26 +1832,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "id": "dac72819",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "fibonacci of 1 is 0\n",
-      "fibonacci of 2 is 1\n",
-      "fibonacci of 3 is 1\n",
-      "fibonacci of 4 is 2\n",
-      "fibonacci of 5 is 3\n",
-      "fibonacci of 6 is 5\n",
-      "fibonacci of 7 is 8\n",
-      "fibonacci of 8 is 13\n",
-      "fibonacci of 9 is 21\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Fibonacci program to demonstarte \n",
     "def fibonacci(num):\n",
@@ -1820,26 +1870,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
    "id": "e297e0f3",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1.0\n",
-      "0.5\n",
-      "0.6666666666666666\n",
-      "0.6\n",
-      "0.625\n",
-      "0.6153846153846154\n",
-      "0.6190476190476191\n",
-      "0.6176470588235294\n",
-      "0.6181818181818182\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "fibo_cache = {}\n",
     "\n",
@@ -1885,18 +1919,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "8a4d69d1",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# local\n",
     "\n",
@@ -1910,18 +1936,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "f9388c38",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "12\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Enclosed\n",
     "def funcA():\n",
@@ -1935,18 +1953,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "83a473c8",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "4\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Global\n",
     "\n",
@@ -1959,18 +1969,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "2d622c3d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Built-in\n",
     "from math import e\n",
@@ -1993,20 +1995,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "792d8cd1",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "In func1 x = 11\n",
-      "In func1 y = 22\n",
-      "In func2 x = 1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "x=1\n",
     "def func1():\n",
@@ -2024,20 +2016,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "61e5b9a0",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "In func1 x = 11\n",
-      "In func1 y = 22\n",
-      "In func2 x = 11\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "x=1\n",
     "def func1():\n",
@@ -2065,20 +2047,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "9945619d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "inner function sees x as 3\n",
-      "outer function sees x as 2\n",
-      "Globally x is seen as  1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Without nonlocal keyword\n",
     "x = 1\n",
@@ -2095,20 +2067,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "id": "e797c174",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "inner function sees x as 3\n",
-      "outer function sees x as 3\n",
-      "Globally x is seen as  1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# With nonlocal keyword\n",
     "x = 1\n",
