--- a/Python for math.ipynb
+++ b/Python for math.ipynb
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "id": "3e860042",
    "metadata": {},
    "outputs": [
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "id": "b623c0b3",
    "metadata": {},
    "outputs": [
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 17,
    "id": "4bc31fbf",
    "metadata": {},
    "outputs": [
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 18,
    "id": "22cc1145",
    "metadata": {},
    "outputs": [
@@ -468,32 +468,80 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-5 is an odd number\n",
+      "-5 is an odd  number\n",
       "-4 is an even number\n",
-      "-3 is an odd number\n",
+      "-3 is an odd  number\n",
       "-2 is an even number\n",
-      "-1 is an odd number\n",
-      "0 is an even number\n",
-      "1 is an odd number\n",
-      "2 is an even number\n",
-      "3 is an odd number\n",
-      "4 is an even number\n",
-      "5 is an odd number\n"
+      "-1 is an odd  number\n",
+      " 0 is an even number\n",
+      " 1 is an odd  number\n",
+      " 2 is an even number\n",
+      " 3 is an odd  number\n",
+      " 4 is an even number\n",
+      " 5 is an odd  number\n"
      ]
     }
    ],
    "source": [
     "for i in range(-5,6):\n",
-    "    if i%2 == 0:\n",
-    "        print(f\"{i} is an even number\")\n",
+    "    if i>=0:\n",
+    "        firstchar = \" \"\n",
     "    else:\n",
-    "        print(f\"{i} is an odd number\")"
+    "        firstchar = \"\"\n",
+    "    if i%2 == 0:\n",
+    "        print(f\"{firstchar}{i} is an even number\")\n",
+    "    else:\n",
+    "        print(f\"{firstchar}{i} is an odd  number\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "6a6487ef",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\text{The value of } 5^{2} = 25$"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Math object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\text{The value of } \\frac{5}{2} = 2.5$"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Math object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "def power(x,y):\n",
+    "    return x**y\n",
+    "def div(x,y):\n",
+    "    return x/y\n",
+    "\n",
+    "x = 5\n",
+    "y = 2\n",
+    "\n",
+    "display(Math(\"\\\\text{The value of } %g^{%g} = %g\"%(x,y,power(x,y))))\n",
+    "display(Math(\"\\\\text{The value of } \\\\frac{%g}{%g} = %g\"%(x,y,div(x,y))))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6a6487ef",
+   "id": "2b7c3683",
    "metadata": {},
    "outputs": [],
    "source": []
