--- a/Python basics.ipynb
+++ b/Python basics.ipynb
@@ -750,6 +750,67 @@
   {
    "cell_type": "code",
    "execution_count": 30,
+   "id": "39ef817b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "k1\n",
+      "k2\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in d:\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "da7ad375",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "keerthi\n",
+      "vasan\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in d:\n",
+    "    print(d[i])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "c93c7b8e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "one:1\n",
+      "two:2\n"
+     ]
+    }
+   ],
+   "source": [
+    "d = {\"one\":1,\"two\":2}\n",
+    "for key,value in d.items():\n",
+    "    print(f\"{key}:{value}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
    "id": "1961affd",
    "metadata": {},
    "outputs": [
@@ -759,7 +820,7 @@
        "dict_keys(['k1', 'k2'])"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -770,7 +831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 55,
    "id": "6dff03ad",
    "metadata": {},
    "outputs": [
@@ -780,13 +841,104 @@
        "dict_values(['abcd', 'asdf'])"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "dict.values()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "36376a2a",
+   "metadata": {},
+   "source": [
+    "## Nesting dictionaries and lists and vise versa"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "01eeffe2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Delhi\n"
+     ]
+    }
+   ],
+   "source": [
+    "travel_vlog = {\"India\":{\"cities\":[\"Chennai\",\"Mumbai\",\"Delhi\"],\"totalvisits\":15},\n",
+    "              \"France\":{\"cities\":[\"Paris\",\"Lille\",\"Dijon\"],\"totalvisits\":12}}\n",
+    "print(travel_vlog[\"India\"][\"cities\"][2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "f3a7128c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12\n"
+     ]
+    }
+   ],
+   "source": [
+    "travel_vlog = [\n",
+    "    {\n",
+    "        \"India\":{\n",
+    "            \"cities\":[\"Chennai\",\"Mumbai\",\"Delhi\"],\n",
+    "            \"totalvisits\":15\n",
+    "        }\n",
+    "    },\n",
+    "    {\n",
+    "        \"France\":{\n",
+    "            \"cities\":[\"Paris\",\"Lille\",\"Dijon\"],\n",
+    "            \"totalvisits\":12\n",
+    "        }\n",
+    "    }\n",
+    "]\n",
+    "print(travel_vlog[1][\"France\"][\"totalvisits\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "01339933",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "travel_vlog.append({\"Germany\":{\n",
+    "    \"Citiesvisited\":[\"Berlin\",\"Hamburg\",\"Stuttgart\"],\n",
+    "    \"totalvisits\":3\n",
+    "}})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "4ab1f702",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'India': {'cities': ['Chennai', 'Mumbai', 'Delhi'], 'totalvisits': 15}}, {'France': {'cities': ['Paris', 'Lille', 'Dijon'], 'totalvisits': 12}}, {'Germany': 'Berlin'}, {'Germany': {'Citiesvisited': ['Berlin', 'Hamburg', 'Stuttgart'], 'totalvisits': 3}}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(travel_vlog)"
    ]
   },
   {
@@ -800,7 +952,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 35,
    "id": "4d3ce4ab",
    "metadata": {},
    "outputs": [
@@ -832,7 +984,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 36,
    "id": "2431344a",
    "metadata": {},
    "outputs": [
@@ -850,7 +1002,7 @@
        "4"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -872,7 +1024,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 37,
    "id": "ef50e299",
    "metadata": {},
    "outputs": [
@@ -891,7 +1043,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 38,
    "id": "7c8c4d9a",
    "metadata": {},
    "outputs": [],
@@ -913,7 +1065,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 39,
    "id": "246856fc",
    "metadata": {},
    "outputs": [
@@ -934,7 +1086,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 40,
    "id": "67f15e5b",
    "metadata": {},
    "outputs": [
@@ -968,7 +1120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 41,
    "id": "27e349f9",
    "metadata": {},
    "outputs": [
@@ -997,7 +1149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 42,
    "id": "fdd5d3b5",
    "metadata": {},
    "outputs": [
@@ -1007,7 +1159,7 @@
        "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1021,7 +1173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 43,
    "id": "5a81c553",
    "metadata": {},
    "outputs": [
@@ -1060,7 +1212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 44,
    "id": "57b4d4dc",
    "metadata": {},
    "outputs": [
@@ -1094,7 +1246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 45,
    "id": "6e297c0c",
    "metadata": {},
    "outputs": [],
@@ -1105,7 +1257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 46,
    "id": "6c8269cf",
    "metadata": {},
    "outputs": [
@@ -1115,7 +1267,7 @@
        "('hello vasan', 'hello keerthi')"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1135,7 +1287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 47,
    "id": "1f1ae520",
    "metadata": {},
    "outputs": [],
@@ -1145,7 +1297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 48,
    "id": "828d6d22",
    "metadata": {},
    "outputs": [
@@ -1155,7 +1307,7 @@
        "<function __main__.say_hello(name1, name2)>"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1166,7 +1318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 49,
    "id": "31d0eeae",
    "metadata": {},
    "outputs": [
@@ -1176,7 +1328,7 @@
        "('hello ram', 'hello sita')"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1197,7 +1349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 50,
    "id": "7968b532",
    "metadata": {},
    "outputs": [
@@ -1207,7 +1359,7 @@
        "15"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1219,7 +1371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 51,
    "id": "e8d82c1e",
    "metadata": {},
    "outputs": [
@@ -1229,7 +1381,7 @@
        "30"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1241,7 +1393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 52,
    "id": "3955ce5a",
    "metadata": {},
    "outputs": [
@@ -1273,7 +1425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 53,
    "id": "4f8fb2d4",
    "metadata": {},
    "outputs": [
@@ -1283,7 +1435,7 @@
        "__main__.Cars"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1296,7 +1448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 54,
    "id": "959ddd5d",
    "metadata": {},
    "outputs": [
@@ -1307,7 +1459,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-51-3e75fd4c8739>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mc\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mcars\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mc\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-54-3e75fd4c8739>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mc\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mcars\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mc\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
       "\u001b[1;31mNameError\u001b[0m: name 'cars' is not defined"
      ]
     }
@@ -1559,20 +1711,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "id": "9c97a30a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "garderning\n",
-      "art\n",
-      "play\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class Father:\n",
     "    def getSkill(self):\n",
@@ -1649,21 +1791,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "id": "dd1b3661",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'tuple_iterator'>\n",
-      "apple\n",
-      "orange\n",
-      "kiwi\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "mytuple = (\"apple\",\"orange\",\"kiwi\")\n",
     "myiter = iter(mytuple)\n",
@@ -1675,28 +1806,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "id": "a0ff0dda",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "d\n",
-      "a\n",
-      "d\n",
-      " \n",
-      "a\n",
-      "n\n",
-      "d\n",
-      " \n",
-      "m\n",
-      "o\n",
-      "m\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "mystring = \"dad and mom\"\n",
     "myiter = iter(mystring)\n",
@@ -1723,37 +1836,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "id": "01bfd76e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "5\n",
-      "6\n",
-      "7\n",
-      "8\n",
-      "9\n",
-      "10\n",
-      "11\n",
-      "12\n",
-      "13\n",
-      "14\n",
-      "15\n",
-      "16\n",
-      "17\n",
-      "18\n",
-      "19\n",
-      "20\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class NaturalNumber:\n",
     "    def __init__(self):\n",
