--- a/Python for math.ipynb
+++ b/Python for math.ipynb
@@ -2,12 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 40,
    "id": "b874a564",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from IPython.display import display,Math"
+    "from IPython.display import display,Math\n",
+    "import sympy as sym\n",
+    "import numpy as np"
    ]
   },
   {
@@ -496,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "id": "6a6487ef",
    "metadata": {},
    "outputs": [
@@ -539,9 +541,367 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d1c7fd03",
+   "metadata": {},
+   "source": [
+    "# Sympy\n",
+    "\n",
+    "Representing the symbols as it is. For example writing sqrt(2) with squareroot symbol"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "47d1bc61",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = sym.symbols('x')\n",
+    "x\n",
+    "a,b = sym.symbols('a,b')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ac92e963",
+   "metadata": {},
+   "source": [
+    "Now x is a symbol"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "ca4c4970",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle x + 4$"
+      ],
+      "text/plain": [
+       "x + 4"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "display(x+4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "5a9f62b3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle x^{4}$"
+      ],
+      "text/plain": [
+       "x**4"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\frac{x}{b}$"
+      ],
+      "text/plain": [
+       "x/b"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "display(x**4)\n",
+    "display(x/b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "58d527a6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.4142135623730951"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\sqrt{2}$"
+      ],
+      "text/plain": [
+       "sqrt(2)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "display(np.sqrt(2)) # numerical\n",
+    "display(sym.sqrt(2)) # symbolic"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "53f8fb59",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle y\\times{x^2}$"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Math object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "x,y = sym.symbols('x,y')\n",
+    "display(Math(\"y\\\\times{x^2}\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "8bbf1167",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\sqrt{4x}$"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Math object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\sqrt4x$"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Math object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "display(Math(\"\\\\sqrt{4x}\"))\n",
+    "display(Math(\"\\\\sqrt4x\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "id": "e105c951",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\sqrt{x}\\sqrt{x}$"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Math object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle x$"
+      ],
+      "text/plain": [
+       "x"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "display(Math(\"\\\\sqrt{x}\\\\sqrt{x}\")) # Latex to display as it is\n",
+    "display(sym.sqrt(x)*sym.sqrt(x)) # Sympy computes the values"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c3865a19",
+   "metadata": {},
+   "source": [
+    "### Greek symbols"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "f5b42dc4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\sigma = \\mu \\times \\sqrt{5}$"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Math object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "display(Math(\"\\\\sigma = \\\\mu \\\\times \\\\sqrt{5}\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "6ec4165f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle x_m + y^{zt}$"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Math object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "display(Math(\"x_m + y^{zt}\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a8192d59",
+   "metadata": {},
+   "source": [
+    "# Latex coding in markdown cell\n",
+    "We use the following rules to print latex code in markdown cell\\\n",
+    "\n",
+    "1.Use $<expression>$ to print the latex code\\\n",
+    "2.Use $$<expression>$$ to print the latex code in new line in centre\\\n",
+    "3.Use a single (\\) and not double(\\\\)\n",
+    "\n",
+    "Go throught the example below"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "45264ce2",
+   "metadata": {},
+   "source": [
+    "This is a expression : $\\frac{1}{x-y}$\n",
+    "$$\\frac{1}{x-y}$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "id": "dbd18122",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle 4x+5y-8z = 17$"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Math object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle 2\\pi ft+\\theta$"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Math object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle e=mc^2$"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Math object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\frac{4+5x^2}{(1+x)(1-x)}$"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Math object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "display(Math(\"4x+5y-8z = 17\"))\n",
+    "display(Math(\"2\\\\pi ft+\\\\theta\"))\n",
+    "display(Math(\"e=mc^2\"))\n",
+    "display(Math(\"\\\\frac{4+5x^2}{(1+x)(1-x)}\"))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2b7c3683",
+   "id": "d9165838",
    "metadata": {},
    "outputs": [],
    "source": []
