--- a/Drawing on images.ipynb
+++ b/Drawing on images.ipynb
@@ -60,7 +60,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x2141ef6a820>"
+       "<matplotlib.image.AxesImage at 0x1da067cb970>"
       ]
      },
      "execution_count": 4,
@@ -177,7 +177,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x2141fd02910>"
+       "<matplotlib.image.AxesImage at 0x1da0754eca0>"
       ]
      },
      "execution_count": 6,
@@ -287,7 +287,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x2141fd62c40>"
+       "<matplotlib.image.AxesImage at 0x1da075b4d00>"
       ]
      },
      "execution_count": 8,
@@ -396,7 +396,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x2141fdb5be0>"
+       "<matplotlib.image.AxesImage at 0x1da07605d60>"
       ]
      },
      "execution_count": 10,
@@ -514,7 +514,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x2141fe16640>"
+       "<matplotlib.image.AxesImage at 0x1da07666760>"
       ]
      },
      "execution_count": 12,
@@ -539,11 +539,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6ba16743",
+   "metadata": {},
+   "source": [
+    "# Drawing with mouse clicks"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "6a2d935c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-13-927e7ffac984>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     23\u001b[0m     \u001b[0mcv2\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mimshow\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"blank_image\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mblank_img\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     24\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 25\u001b[1;33m     \u001b[1;32mif\u001b[0m \u001b[0mcv2\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwaitKey\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m&\u001b[0m \u001b[1;36m0xff\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;36m27\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     26\u001b[0m         \u001b[1;32mbreak\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     27\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "blank_img = np.zeros((512,512,3))\n",
     "\n",
@@ -554,7 +574,7 @@
     "def draw_circle(event,x,y,flags,param):\n",
     "    if event == cv2.EVENT_LBUTTONDOWN:\n",
     "        cv2.circle(blank_img,(x,y),100,color=(0,200,0),thickness=-1)\n",
-    "    \n",
+    "\n",
     "##############################\n",
     "## link the image and event ##\n",
     "##############################\n",
@@ -577,9 +597,70 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "fd82ee61",
+   "metadata": {},
+   "source": [
+    "# Drawing with mouse drag"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "b6ad137a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import cv2\n",
+    "import numpy as np\n",
+    "\n",
+    "##############\n",
+    "## variable ##\n",
+    "###############\n",
+    "ix,iy = -1,-1\n",
+    "isDrawing = False\n",
+    "\n",
+    "##############\n",
+    "## Function ##\n",
+    "##############\n",
+    "\n",
+    "def draw_rectangle(event,x,y,flags,param):\n",
+    "    global ix,iy,isDrawing\n",
+    "    \n",
+    "    if event == cv2.EVENT_LBUTTONDOWN:\n",
+    "        isDrawing = True\n",
+    "        ix,iy = x,y\n",
+    "        \n",
+    "    elif event == cv2.EVENT_MOUSEMOVE and isDrawing == True:\n",
+    "        cv2.rectangle(blank_img,(ix,iy),(x,y),color=(0,0,255),thickness=-1)\n",
+    "        \n",
+    "    elif event == cv2.EVENT_LBUTTONUP:\n",
+    "        isDrawing = False\n",
+    "        cv2.rectangle(blank_img,(ix,iy),(x,y),color=(0,0,255),thickness=-1)\n",
+    "        \n",
+    "        \n",
+    "\n",
+    "################\n",
+    "## Show image ##\n",
+    "################\n",
+    "\n",
+    "blank_img = np.zeros((512,512,3))\n",
+    "cv2.namedWindow(\"drag_image\")\n",
+    "cv2.setMouseCallback(\"drag_image\",draw_rectangle)\n",
+    "\n",
+    "while True:\n",
+    "    cv2.imshow(\"drag_image\",blank_img)\n",
+    "    \n",
+    "    if cv2.waitKey(1) & 0xff == 27:\n",
+    "        break\n",
+    "        \n",
+    "cv2.destroyAllWindows()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "45d3a259",
+   "id": "4b0b574b",
    "metadata": {},
    "outputs": [],
    "source": []
