Flash card flip and change words

--- a/py programs/Flashcards/Untitled.ipynb
+++ b/py programs/Flashcards/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "id": "9b98d7c2",
    "metadata": {},
    "outputs": [],
@@ -12,24 +12,38 @@
     "import random\n",
     "\n",
     "BACKGROUND_COLOR = \"#B1DDC6\"\n",
-    "\n",
-    "\n",
+    "random_index\n",
+    "words_df = pd.read_csv(\"data/french_words.csv\")\n",
+    "words_db = words_df.to_dict()\n",
+    "    \n",
     "def change_word():\n",
-    "    words_df = pd.read_csv(\"data/french_words.csv\")\n",
-    "    words_db = words_df.to_dict()\n",
+    "    global random_index,flip_timer\n",
+    "    window.after_cancel(flip_timer)\n",
     "    random_index=random.randint(0,100)\n",
     "    random_word = words_db[\"French\"][random_index]\n",
-    "    canvas.itemconfig(french_word,text=random_word)\n",
+    "    canvas.itemconfig(french_word,text=random_word,fill='black')\n",
+    "    canvas.itemconfig(card_title,text='French',fill='black')\n",
+    "    canvas.itemconfig(card_background,image=card_front_img)\n",
+    "    flip_timer=window.after(3000,flip_card)\n",
+    "    \n",
+    "def flip_card():\n",
+    "    canvas.itemconfig(card_background,image=card_back_img)\n",
+    "    canvas.itemconfig(card_title,text=\"English\",fill='white')\n",
+    "    canvas.itemconfig(french_word,text=words_db[\"English\"][random_index],fill='white')\n",
+    "    \n",
+    "    \n",
     "    \n",
     "window=Tk()\n",
     "window.title(\"flash card\")\n",
     "window.config(padx=50,pady=50,bg=BACKGROUND_COLOR)\n",
+    "flip_timer=window.after(3000,flip_card)\n",
     "\n",
     "canvas=Canvas(width=800,height=526)\n",
     "canvas.config(bg=BACKGROUND_COLOR,highlightthickness=0)\n",
     "card_front_img=PhotoImage(file='images/card_front.png')\n",
-    "canvas.create_image(400,263,image=card_front_img)\n",
-    "canvas.create_text(400,150,text=\"French\",font=(\"Ariel\",40,\"italic\"))\n",
+    "card_back_img=PhotoImage(file='images/card_back.png')\n",
+    "card_background=canvas.create_image(400,263,image=card_front_img)\n",
+    "card_title=canvas.create_text(400,150,text=\"French\",font=(\"Ariel\",40,\"italic\"))\n",
     "french_word=canvas.create_text(400,263,text=\"\",font=(\"Ariel\",60,\"bold\"))\n",
     "change_word()\n",
     "canvas.grid(row=0,column=0,columnspan=2)\n",
