--- a/py programs/Flashcards/Flashcards.ipynb
+++ b/py programs/Flashcards/Flashcards.ipynb
@@ -12,16 +12,28 @@
     "import random\n",
     "\n",
     "BACKGROUND_COLOR = \"#B1DDC6\"\n",
-    "random_index\n",
-    "words_df = pd.read_csv(\"data/french_words.csv\")\n",
-    "words_db = words_df.to_dict()\n",
+    "to_learn={}\n",
+    "\n",
+    "try:\n",
+    "    data = pd.read_csv(\"data/words_to_learn.csv\")\n",
+    "except FileNotFoundError:\n",
+    "    original_data=pd.read_csv(\"data/french_words.csv\")\n",
+    "    to_learn = original_data.to_dict(orient=\"records\")\n",
+    "else:\n",
+    "    to_learn=data.to_dict(orient=\"records\")\n",
+    "\n",
+    "\n",
+    "def is_known():\n",
+    "    to_learn.remove(current_card)\n",
+    "    data= pd.DataFrame(to_learn)\n",
+    "    data.to_csv(\"data/words_to_learn.csv\",index=False)   \n",
+    "    change_word()\n",
     "    \n",
     "def change_word():\n",
-    "    global random_index,flip_timer\n",
+    "    global current_card,flip_timer\n",
     "    window.after_cancel(flip_timer)\n",
-    "    random_index=random.randint(0,100)\n",
-    "    random_word = words_db[\"French\"][random_index]\n",
-    "    canvas.itemconfig(french_word,text=random_word,fill='black')\n",
+    "    current_card = random.choice(to_learn)\n",
+    "    canvas.itemconfig(french_word,text=current_card[\"French\"],fill='black')\n",
     "    canvas.itemconfig(card_title,text='French',fill='black')\n",
     "    canvas.itemconfig(card_background,image=card_front_img)\n",
     "    flip_timer=window.after(3000,flip_card)\n",
@@ -29,9 +41,7 @@
     "def flip_card():\n",
     "    canvas.itemconfig(card_background,image=card_back_img)\n",
     "    canvas.itemconfig(card_title,text=\"English\",fill='white')\n",
-    "    canvas.itemconfig(french_word,text=words_db[\"English\"][random_index],fill='white')\n",
-    "    \n",
-    "    \n",
+    "    canvas.itemconfig(french_word,text=current_card[\"English\"],fill='white')\n",
     "    \n",
     "window=Tk()\n",
     "window.title(\"flash card\")\n",
@@ -53,7 +63,7 @@
     "unknown_button.grid(row=1,column=0)\n",
     "\n",
     "check_image = PhotoImage(file='images/right.png')\n",
-    "known_button=Button(image=check_image,command=change_word)\n",
+    "known_button=Button(image=check_image,command=is_known)\n",
     "known_button.grid(row=1,column=1)\n",
     "\n",
     "window.mainloop()\n"
